[package]
name = "oracle_shield"
version = "1.0.0"
authors = ["Sorane Oumi <22672990+soraneoumi@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ctrlc = "3.2.1"
rand = "0.8.4"
rayon = "1.5"
clap = "3.0"
tokio = { version = "1.14", features = ["full"] }

[profile.release]
lto = true
